added chart package

--- a/app/design/adminhtml/default/default/layout/katai/reports/layout.xml
+++ b/app/design/adminhtml/default/default/layout/katai/reports/layout.xml
@@ -6,6 +6,12 @@
         </reference>
     </adminhtml_katai_reports_index>
 
+    <adminhtml_katai_reports_run>
+        <reference name="content">
+            <block type="katai_reports/adminhtml_katai_reports_run" name="katai.reports.run.container"/>
+        </reference>
+    </adminhtml_katai_reports_run>
+
     <adminhtml_katai_reports_edit>
         <reference name="content">
             <block type="katai_reports/adminhtml_katai_reports_edit" name="katai.reports.edit.container"/>
@@ -14,16 +20,22 @@
             <block type="katai_reports/adminhtml_katai_reports_edit_tabs" name="adminhtml_katai_reports_edit_tabs">
                 <block type="katai_reports/adminhtml_katai_reports_edit_tab_main" name="adminhtml_katai_reports_edit_tab_main" />
                 <block type="katai_reports/adminhtml_katai_reports_edit_tab_query" name="adminhtml_katai_reports_edit_tab_query" />
-                <block type="katai_reports/adminhtml_katai_reports_edit_tab_report" name="adminhtml_katai_reports_edit_tab_report" />
-                <block type="katai_reports/adminhtml_katai_reports_edit_tab_chart" name="adminhtml_katai_reports_edit_tab_chart" />
-                <block type="katai_reports/adminhtml_katai_reports_edit_tab_custom" name="adminhtml_katai_reports_edit_tab_custom" />
+                <!--<block type="katai_reports/adminhtml_katai_reports_edit_tab_report" name="adminhtml_katai_reports_edit_tab_report" />-->
+                <!--<block type="katai_reports/adminhtml_katai_reports_edit_tab_chart" name="adminhtml_katai_reports_edit_tab_chart" />-->
+                <!--<block type="katai_reports/adminhtml_katai_reports_edit_tab_custom" name="adminhtml_katai_reports_edit_tab_custom" />-->
 
                 <action method="addTab"><name>main_section</name><block>adminhtml_katai_reports_edit_tab_main</block></action>
                 <action method="addTab"><name>query_section</name><block>adminhtml_katai_reports_edit_tab_query</block></action>
-                <action method="addTab"><name>report_section</name><block>adminhtml_katai_reports_edit_tab_report</block></action>
-                <action method="addTab"><name>chart_section</name><block>adminhtml_katai_reports_edit_tab_chart</block></action>
-                <action method="addTab"><name>custom_section</name><block>adminhtml_katai_reports_edit_tab_custom</block></action>
+                <!--<action method="addTab"><name>report_section</name><block>adminhtml_katai_reports_edit_tab_report</block></action>-->
+                <!--<action method="addTab"><name>chart_section</name><block>adminhtml_katai_reports_edit_tab_chart</block></action>-->
+                <!--<action method="addTab"><name>custom_section</name><block>adminhtml_katai_reports_edit_tab_custom</block></action>-->
             </block>
         </reference>
     </adminhtml_katai_reports_edit>
+
+    <adminhtml_katai_reports_chart_index>
+        <reference name="content">
+            <block type="katai_reports/adminhtml_katai_reports_chart" name="katai.report.chart.index.container"/>
+        </reference>
+    </adminhtml_katai_reports_chart_index>
 </layout>
